# Mephi_c

Laba1/LABA1_Mephi_Remake/: CMakeLists.txt  complex.c  complex.h  double.c  double.h  fieldinfo.h  integer.c  integer.h  main.c  test.c  test.h  vector.c  vector.h
Laba2/LABA2_Mephi/: CMakeLists.txt  ConsoleInput.h  ConsoleInteraction.h  DynamicArray.h  ImmutableArraySequence.h  ImmutableListSequence.h  ImmutableSequence.h  LinkedList.h  MutableArraySequence.h  MutableListSequence.h  MutableSequence.h  main.cpp  tests.cpp  tests.h
Laba3/: MatrixInteraction.h  SquareMatrix.h  Vector.h  VectorInteraction.h  VisualConsoleDesign.cpp
Laba4/: BinaryHeap.h  BinaryTree.h  CMakeLists.txt  ConsoleVisual.h  Interactions.cpp  main.cpp  tests.cpp  tests.h
Sem2/Laba1/LABA1_Mephi_Remake/: fieldinfo.h  main.c  vector.c
Sem2/Laba1/LABA1_Mephi_Remake/tests/: testComplex.txt  testDouble.txt
Sem2/Laba2/LABA2_Mephi/: CMakeLists.txt  ConsoleInteraction.h  DynamicArray.h  ImmutableArraySequence.h  ImmutableListSequence.h  ImmutableSequence.h  LinkedList.h  MutableArraySequence.h
Sem2/Laba3/: CMakeLists.txt  MatrixInteraction.h  SquareMatrix.h  VisualConsoleDesign.cpp  main.cpp  tests.cpp  tests.h
Sem2/Laba4/: BinaryHeap.h  BinaryTree.h  ConsoleVisual.cpp  Interactions.cpp  Interactions.h  main.cpp  tests.cpp
Sem3/Laba1/: CMakeLists.txt  Sequence.h  SharedPtr.h  SmartList.h  SmartListSequence.h  SmartPtr.h  UniquePtr.h  WeakPtr.h  main.cpp
Sem3/Laba1/tests/: Graph.cpp  Graph.h  LoadTests.cpp  SmartListSequenceTests.cpp  SmartListTests.cpp  SmartPointersTests.cpp  test.h
Sem3/Laba2/: CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  SortAdapter.cpp  SortAdapter.h  SortUI.cpp  SortUI.h  SortUi.h  Student.h  main.cpp  tests.cpp  tests.h
Sem3/Laba2/sorting/: BinaryInsertionSorter.h  BubbleSorter.h  CountingSorter.h  HeapSorter.h  ISorter.h  ImprovedSelectionSorter.h  InsertionSorter.h  MergeSorter.h  QuickSorter.h  SelectionSorter.h  ShakerSorter.h  ShellSorter.h  TreeSorter.h
Sem3/Laba3/: Board.cpp  Board.h  Bot.cpp  Bot.h  CMakeLists.txt  Game.cpp  Game.h  TictactoeUI.cpp  TictactoeUI.h  UnorderedMap.h  main.cpp
Sem3/Laba3/tests/: BoardTests.cpp  BotTests.cpp  UnorderedMapTests.cpp  tests.h
Sem3/Laba4/: CMakeLists.txt  Edge.h  Graph.h  GraphUI.cpp  GraphUI.h  Vertex.h  main.cpp
Sem3/Laba4/tests/: EdgeTests.cpp  GraphTests.cpp  VertexTests.cpp  tests.h
Sem3/tests/: LoadTests.cpp  SmartListSequenceTests.cpp  SmartListTests.cpp  SmartPointersTests.cpp  test.h
